# FastAPIFilmsCatalogs

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  config.default.yaml  pyproject.toml
.gitgub/workflows/: hello-actions.yaml
.github/workflows/: hello-actions.yaml  python-checks.yaml
films-catalog/: .coveragerc  .env.template  app_lifespan.py  config.default.yaml  config.local.yaml  main.py  stuff.py
films-catalog/api/: main_views.py
films-catalog/api/api_v1/: __init__.py
films-catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
films-catalog/api/api_v1/films/: crud.py  dependencies.py  redis.py  views.py
films-catalog/api/api_v1/films/views/: __init__.py  detail_views.py  list_views.py
films-catalog/commands/: cli.py  hello.py  tokens.py
films-catalog/core/: config.py
films-catalog/dependencies/: auth.py  movies.py
films-catalog/misc/: flash_messages.py
films-catalog/rest/: __init__.py  main_views.py
films-catalog/rest/movies/: __init__.py  create_views.py  delete_views.py  list_views.py  update_views.py
films-catalog/schemas/: film.py  movie.py
films-catalog/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py
films-catalog/services/movies/: __init__.py  form_responce_helper.py
films-catalog/storage/movies/: __init__.py  crud.py  exceptions.py
films-catalog/templates/: about.html  base.html  home.html
films-catalog/templates/components/: navbar.html
films-catalog/templates/macro/: form_fields.html
films-catalog/templates/movies/: create.html  list.html  update.html
films-catalog/templates/movies/components/: back-to-list.html
films-catalog/templates/movies/macro/: form.html
films-catalog/templating/: jinja_template.py
films-catalog/tests/: __init__.py  conftest.py
films-catalog/tests/test_api/: conftest.py  test_views.py
films-catalog/tests/test_api/test_api_v1/test_auth/test_services/: test_redis.py
films-catalog/tests/test_api/test_api_v1/test_films/: test_crud.py  test_dependencies.py
films-catalog/tests/test_api/test_api_v1/test_films/test_views/test_detail_views/: test_delete.py  test_update_partial.py
films-catalog/tests/test_api/test_api_v1/test_films/test_views/test_list_views/: test_create.py
films-catalog/tests/test_schemas/: test_films.py
