[project]
name = "fastapifilmscatalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic-settings[yaml]>=2.10.1",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.0.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.11",
]

# uv settings
[tool.uv]
required-version = "~=0.8.5"


#pytest settings
[tool.pytest.ini_options]
minversion = '8.3'


# mypy setttings
[tool.mypy]
strict = true
plugins = [
    'pydantic.mypy'
]

#ruff settings

[tool.ruff]
# Exclude a variety of commonly ignored directories.
required-version = '>= 0.11.11'
src = [
    'src',
    'films-catalog'
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.9
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    'ANN', #flake8-annotation (ANN)
    'FAST', # FASTAPI (FAST)
    'I', # isort(i)
    'F', # Pyflakes(F)
    "COM", # flake8-commas(COM)
    "Q", # flake8-quotes(Q)
    'AIR',
]
ignore = [

]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
